--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.7",
     "jade": "*",
     "stylus": "*",
-    "mongoose": "~3.8.4"
+    "mongoose": "~3.8.4",
+    "node-twitter-api": "~1.1.1"
   }
 }
